--- a/Unity/Packages/manifest.json
+++ b/Unity/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.ide.vscode": "1.2.4",
     "com.unity.polybrush": "1.0.2",
     "com.unity.postprocessing": "3.1.1",
+    "com.unity.probuilder": "4.4.0",
     "com.unity.test-framework": "1.1.29",
     "com.unity.textmeshpro": "2.1.6",
     "com.unity.timeline": "1.2.18",
